--- a/architectureProject/index.html
+++ b/architectureProject/index.html
@@ -2,11 +2,23 @@
 <html>
 <head>
 <title>Page Title</title>
+<script src="sms-service.js"></script>
+<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="index.css">
 </head>
 <body>
 
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
+
+<div class="chooseManu">
+    <a href="./barberComponent/barber.html">
+        <button>Barber</button>
+    </a>
+    <a href="./customerComponent/customer.html">
+        <button>Customer</button>
+    </a>
+</div>
 
 </body>
 </html>
