added registration and connect to firebase

--- a/architectureProject/public/customerComponent/customer.html
+++ b/architectureProject/public/customerComponent/customer.html
@@ -46,7 +46,7 @@
             <label for="barber">Barber</label>
           </div>
           <div class="col-75">
-            <select id="country" name="country">
+            <select id="barber" name="barber">
               <option value="australia">Australia</option>
               <option value="canada">Canada</option>
               <option value="usa">USA</option>
