--- a/architectureProject/public/index.html
+++ b/architectureProject/public/index.html
@@ -20,60 +20,42 @@
 </head>
 
 <body>
-    <div class="topnav" id="myTopnav">
-        <a href="./index.html" class="active">Home</a>
-        <!-- <div id="usernameSigninBar">
-            <a class="signin">Sign In</a>
-        </div> -->
-        <div id="usernameSignBar">
-            <a id="userNameBar" class="username"></a>
-            <a id="signInOut" class="signout">Sign Out</a>
+    <nav class="navbar sticky-top navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a href="./index.html" class="navbar-brand" href="#">Home</a>
+            <div class="userProp">
+                <span id="userName" class="navbar-brand mb-0 h1"></span>
+                <button id="navSignUpBtn" class="btn btn-outline-success me-2" type="button" hidden="false">Sign
+                    Up</button>
+                <button id="navSignOutBtn" class="btn btn-outline-success me-2" type="button" hidden="true">Sign
+                    Out</button>
+            </div>
         </div>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <i class="fa fa-bars"></i>
-          </a>
-    </div>
+    </nav>
 
-    <h1>My First Heading</h1>
-    <p>My first paragraph.</p>
+    <br>
 
-    <button id="signUpBtn" onclick="document.getElementById('signUpDialog').style.display='block'"
-        style="width:auto;">Sign Up</button>
-
-    <div id="signUpDialog" class="modal">
-        <span onclick="document.getElementById('signUpDialog').style.display='none'" class="close"
-            title="Close Window">&times;</span>
-        <!-- <form class="modal-content" action="/action_page.php"> -->
-        <form class="modal-content">
+    <div id="signUpDialog" class="dialog" hidden="true">
+        <span id="xDialog" class="close" title="Close Window">&times;</span>
+        <form class="dialog-content">
             <div class="container">
                 <h1>Sign Up</h1>
                 <p>Please fill in this form to create an account.</p>
-                <hr>
                 <label for="phone"><b>Phone Number</b></label><br>
                 <input type="tel" id="phone" name="phone" placeholder="054-4567899" pattern="[0-9]{3}--[0-9]{7}"
-                required>
+                    required>
 
                 <br>
                 <label>
-                    <input type="checkbox" name="barber" style="margin-bottom:15px"> Are you a barber?
+                    <input type="checkbox" id="barberToggle" name="barber" style="margin-bottom:15px"> Are you a barber?
                 </label>
 
-                <!-- <section id="whenSignedOut">
-                    <button id="signInBtn" class="btn btn-primary">Sign in with Google</button>
-                </section>
-
-                <section id="whenSignedIn" hidden="true">
-                    <div id="userDetails"></div>
-                    <button id="signOutBtn" class="btn btn-primary">Sign Out</button>
-                </section> -->
-
+                <div>
+                    <textarea id="freeText" name="text" class="free_text" row="3" cols="50">Tell something about yourself.</textarea>
+                </div>
                 <div class="clearfix">
-                    <button type="button" onclick="document.getElementById('signUpDialog').style.display='none'"
-                        class="cancelbtn">Cancel</button>
-                        
-                    <section id="whenSignedOut">
-                        <button id="signInBtn" class="btn-primary signupbtn">Sign in with Google</button>
-                    </section>
+                    <button id="cancelDialogBtn" type="button" class="cancelbtn">Cancel</button>
+                    <button id="googleSignInBtn" class="btn-primary signupbtn">Sign in with Google</button>
                 </div>
             </div>
         </form>
@@ -81,8 +63,6 @@
 
     <section id="whenSignedIn" hidden="true">
         <div id="userDetails"></div>
-        <button id="signOutBtn" class="btn btn-primary signout-btn">Sign Out</button>
-        <!-- <button type="submit" id="signOutBtn" class="btn btn-primary signout-btn">Sign Out</button> -->
     </section>
 
     <!-- <section id="whenSignedOut">
@@ -95,7 +75,15 @@
     </section> -->
     <hr>
 
+    <div style="width: 30%; margin: auto;">
+        <button id="addReservationData">add Reservation data</button>
+        <button id="addUserData">add User</button>
+        <button id="loadData">load all data</button>
+    </div>
 
+    <ul id="thingsList">
+
+    </ul>
 
     <div class="chooseManu">
         <a href="./barberComponent/barber.html">
