--- a/architectureProject/public/customerComponent/customer.html
+++ b/architectureProject/public/customerComponent/customer.html
@@ -1,129 +1,146 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <script src="https://www.gstatic.com/firebasejs/7.16.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.16.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.16.1/firebase-firestore.js"></script>
-    <script
+
+<head>
+  <script src="https://www.gstatic.com/firebasejs/7.16.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.16.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.16.1/firebase-firestore.js"></script>
+  <!-- <script
       src="https://www.paypal.com/sdk/js?client-id=sb&enable-funding=venmo&currency=USD"
       data-sdk-integration-source="button-factory"
       defer
-    ></script>
-    <script src="../firebaseConfig.js"></script>
-    <script src="../navbar.js" defer></script>
-    <script src="../utils.js" defer></script>
-    <script src="../generateTable.js" defer></script>
-    <script src="customerpagejs.js" defer></script>
+    ></script> -->
+  <script
+    src="https://www.paypal.com/sdk/js?client-id=AbzOaMbfCb9qmBeHrEsYNv2fbxPeKL2HwWTQfpcEvsQYxD5q_E3PLDHTHf-wBb4LA8fOHdAo2txn6Xm7">
+    </script>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+  <script src="../firebaseConfig.js"></script>
+  <script src="../navbar.js" defer></script>
+  <script src="../utils.js" defer></script>
+  <script src="../generateTable.js" defer></script>
+  <script src="customerpagejs.js" defer></script>
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <title>Customers</title>
-        <link rel="stylesheet" href="../navbar.css">
-        <link rel="stylesheet" href="../signup.css">
-        <link rel="stylesheet" href="customer.css" />
-  </head>
-  <body>
-     <nav class="navbar sticky-top navbar-dark bg-dark">
-        <div class="container-fluid">
-           <a href="../index.html" class="navbar-brand" href="#">Home</a>
-           <div class="userProp">
-            <!-- referrerpolicy="no-referrer" is used for not getting 403 from google servers -->
-             <a><img id="avatar" class="avatar" src="../assets/avatar.png" alt="" referrerpolicy="no-referrer"></a>
-             <span id="userName" class="navbar-brand mb-0 h1"></span>
-            <button id="navSignUpBtn" class="btn btn-outline-success me-2" type="button" hidden="false">Sign
-                    Up</button>
-            <button id="navSignOutBtn" class="btn btn-outline-success me-2" type="button" hidden="true">Sign
-                    Out</button>
-           </div>
-        </div>
-      </nav>
+  <title>Customers</title>
+  <link rel="stylesheet" href="../navbar.css">
+  <link rel="stylesheet" href="../signup.css">
+  <link rel="stylesheet" href="customer.css" />
+</head>
 
-      <div id="signUpDialog" class="dialog" hidden="true">
-        <span id="xDialog" class="close" title="Close Window">&times;</span>
-        <form class="dialog-content">
-            <div class="container">
-                <h1>Sign Up</h1>
-                <p>Please fill in this form to create an account.</p>
-                <label for="phone"><b>Phone Number</b></label><br>
-                <input type="tel" id="phone" name="phone" placeholder="054-4567899" pattern="[0-9]{3}--[0-9]{7}"
-                    required>
-
-                <br>
-                <label>
-                    <input type="checkbox" id="barberToggle" name="barber" style="margin-bottom:15px"> Are you a barber?
-                </label>
-
-                <div>
-                    <textarea id="freeText" name="text" class="free_text" placeholder="Tell something about yourself." row="3" cols="50"></textarea>
-                </div>
-                <div class="clearfix">
-                    <button id="cancelDialogBtn" type="button" class="cancelbtn">Cancel</button>
-                    <button id="googleSignInBtn" class="btn-primary signupbtn">Sign in with Google</button>
-                </div>
-            </div>
-        </form>
+<body>
+  <nav class="navbar sticky-top navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a href="../index.html" class="navbar-brand" href="#">Home</a>
+      <div class="userProp">
+        <!-- referrerpolicy="no-referrer" is used for not getting 403 from google servers -->
+        <a><img id="avatar" class="avatar" src="../assets/avatar.png" alt="" referrerpolicy="no-referrer"></a>
+        <span id="userName" class="navbar-brand mb-0 h1"></span>
+        <button id="navSignUpBtn" class="btn btn-outline-success me-2" type="button" hidden="false">Sign
+          Up</button>
+        <button id="navSignOutBtn" class="btn btn-outline-success me-2" type="button" hidden="true">Sign
+          Out</button>
+      </div>
     </div>
-  
-    <h1 class="title">Book Your Haircut</h1>
-    <div class="costumerMenu">
-      <div class="chooseBarber">
-        <label for="barbers">Choose a barber:</label>
+  </nav>
 
-        <select name="barbers" id="barbers">
-          <option value="notSelected" selected disabled>Choose barber</option>
+  <div id="signUpDialog" class="dialog" hidden="true">
+    <span id="xDialog" class="close" title="Close Window">&times;</span>
+    <form class="dialog-content">
+      <div class="container">
+        <h1>Sign Up</h1>
+        <p>Please fill in this form to create an account.</p>
+        <label for="phone"><b>Phone Number</b></label><br>
+        <input type="tel" id="phone" name="phone" placeholder="054-4567899" pattern="[0-9]{3}--[0-9]{7}" required>
+
+        <br>
+        <label>
+          <input type="checkbox" id="barberToggle" name="barber" style="margin-bottom:15px"> Are you a barber?
+        </label>
+
+        <div>
+          <textarea id="freeText" name="text" class="free_text" placeholder="Tell something about yourself." row="3"
+            cols="50"></textarea>
+        </div>
+        <div class="clearfix">
+          <button id="cancelDialogBtn" type="button" class="cancelbtn">Cancel</button>
+          <button id="googleSignInBtn" class="btn-primary signupbtn">Sign in with Google</button>
+        </div>
+      </div>
+    </form>
+  </div>
+
+  <h1 class="title">Book Your Haircut</h1>
+  <div class="costumerMenu">
+    <div class="chooseBarber">
+      <label for="barbers">Choose a barber:</label>
+
+      <select name="barbers" id="barbers">
+        <option value="notSelected" selected disabled>Choose barber</option>
+      </select>
+    </div>
+    <div class="chooseDate">
+      <label for="start">Select Date:</label>
+
+      <input type="date" id="dateInput" name="date_input" />
+    </div>
+  </div>
+
+  <div class="grid-container" id="barberInfo" hidden>
+    <div class="item1">Contact Me</div>
+    <div class="barberMail" id="barberMail"></div>
+    <div class="barberPhone" id="barberPhone">
+      <span id="barberPhoneText"></span>
+      <a id="whatsappLink" class="whatsappLink" href="https://wa.me/9720547278105">
+        <img alt="" src="./CustomerAssets/whatsappIcon.png" width="30" height="30">
+      </a></div>
+    <div id="barberSpeech" class="barberSpeech"></div>
+  </div>
+  <button class="btn btn-primary" id="checkBtn" disabled>Check</button>
+
+  <!-- Table is to be inserted by generateTable() by js -->
+  <div hidden id="timeTable"></div>
+
+  <div hidden id="smart-button-container">
+    <textarea id="noteForBarber" name="noteForBarber" placeholder="Something your barber needs to know?" rows="2"
+      cols="50"></textarea>
+    <div style="text-align: center">
+      <div style="margin-bottom: 1.25rem">
+        <p>
+          In order to place an order, Please select one of the following
+          hairstyles. Then add your payment method.
+        </p>
+        <select class="haircutsSelector" id="item-options">
+          <option value="notSelected" selected disabled>Select A haircut..…</option>
+          <option value="Back On The Block" price="8">Back On The Block - 8 USD</option>
+          <option value="Bruv" price="9">Bruv - 9 USD</option>
+          <option value="Left Over" price="9">Left Over - 9 USD</option>
+          <option value="Sky High" price="10">Sky High - 10 USD</option>
+          <option value="Good Fellas" price="10">Good Fellas - 10 USD</option>
+          <option value="Messi" price="10">Messi - 10 USD</option>
+          <option value="More Life" price="12">More Life - 12 USD</option>
+          <option value="Pomp It Up" price="12">Pomp It Up - 12 USD</option>
+          <option value="Organized Chaos" price="15"> Organized Chaos - 15 USD</option>
+          <option value="Crew Love" price="15">Crew Love - 15 USD</option>
         </select>
-      </div>
-      <div class="chooseDate">
-        <label for="start">Select Date:</label>
-
-        <input type="date" id="dateInput" name="date_input"/>
-      </div>
-    </div>
-    <button class="btn btn-primary" id="checkBtn" disabled>Check</button>
-    
-    <!-- Table is to be inserted by generateTable() by js -->
-    <div hidden id="timeTable"></div>
-
-    <textarea hidden id="noteForBarber" name="noteForBarber" placeholder="Something your barber needs to know?" rows="2" cols="50"></textarea>
-    <div hidden id="smart-button-container">
-      <div style="text-align: center">
-        <div style="margin-bottom: 1.25rem">
-          <p>
-            In order to place an order, Please select one of the following
-            haristyles. Then add your payment method.
-          </p>
-          <select class="haircutsSelector" id="item-options">
-            <option value="notSelected" selected disabled>Select A haircut..…</option>
-            <option value="Back On The Block" price="8">Back On The Block - 8 USD</option>
-            <option value="Bruv" price="9">Bruv - 9 USD</option>
-            <option value="Left Over" price="9">Left Over - 9 USD</option>
-            <option value="Sky High" price="10">Sky High - 10 USD</option>
-            <option value="Good Fellas" price="10">Good Fellas - 10 USD</option>
-            <option value="Messi" price="10">Messi - 10 USD</option>
-            <option value="More Life" price="12">More Life - 12 USD</option>
-            <option value="Pomp It Up" price="12">Pomp It Up - 12 USD</option>
-            <option value="Organized Chaos" price="15"> Organized Chaos - 15 USD</option>
-            <option value="Crew Love" price="15">Crew Love - 15 USD</option>
-          </select>
-          <div>
-            <img src="CustomerAssets/Bruv_hair_cut.jpg" id="bruvHair" hidden>
-            <img src="CustomerAssets/Left_over_hair_cut.jpg" id="leftOverHair" hidden>
-            <img src="CustomerAssets/Sky_high_hair_cut.jpg" id="skyHighHair" hidden>  
-            <img src="CustomerAssets/Good_fellas_hair_cut.jpg" id="goodFellasHair" hidden> 
-            <img src="CustomerAssets/Messi_hair_cut.jpg" id="messiHair" hidden>
-            <img src="CustomerAssets/More_life_hair_cut.jpg" id="moreLifeHair" hidden>
-            <img src="CustomerAssets/Pomp_it_up_hair_cut.jpg" id="pompItHair" hidden>
-            <img src="CustomerAssets/Organized_hair_cut.jpg" id="organaizedHair" hidden>    
-            <img src="CustomerAssets/Back_on_the_block_hair_cut.jpg" id="backOnTheBlockHair" hidden>
-            <img src="CustomerAssets/Crew_love_hair_cut.jpg" id="crewLoveHair" hidden>
-            
-          </div>
-          <select style="visibility: hidden" id="quantitySelect"></select>
+        <div class="haircuts_imgs">
+          <img src="CustomerAssets/Bruv_hair_cut.jpg" id="bruvHair" hidden>
+          <img src="CustomerAssets/Left_over_hair_cut.jpg" id="leftOverHair" hidden>
+          <img src="CustomerAssets/Sky_high_hair_cut.jpg" id="skyHighHair" hidden>
+          <img src="CustomerAssets/Good_fellas_hair_cut.jpg" id="goodFellasHair" hidden>
+          <img src="CustomerAssets/Messi_hair_cut.jpg" id="messiHair" hidden>
+          <img src="CustomerAssets/More_life_hair_cut.jpg" id="moreLifeHair" hidden>
+          <img src="CustomerAssets/Pomp_it_up_hair_cut.jpg" id="pompItHair" hidden>
+          <img src="CustomerAssets/Organized_hair_cut.jpg" id="organaizedHair" hidden>
+          <img src="CustomerAssets/Back_on_the_block_hair_cut.jpg" id="backOnTheBlockHair" hidden>
+          <img src="CustomerAssets/Crew_love_hair_cut.jpg" id="crewLoveHair" hidden>
         </div>
-        <div class="paypalWrapper">
+      </div>
+      <div id="paypalBtnWrapper" class="paypalBtnWrapper" hidden>
         <div id="paypal-button-container"></div>
       </div>
-      </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
