--- a/architectureProject/public/customerComponent/customer.html
+++ b/architectureProject/public/customerComponent/customer.html
@@ -25,7 +25,8 @@
   <title>Customers</title>
   <link rel="stylesheet" href="../navbar.css">
   <link rel="stylesheet" href="../signup.css">
-  <link rel="stylesheet" href="customer.css" />
+  <link rel="stylesheet" href="customer.css">
+  <link rel="shortcut icon" href="#">
 </head>
 
 <body>
