--- a/architectureProject/public/barberComponent/barber.html
+++ b/architectureProject/public/barberComponent/barber.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="../navbar.css">
     <link rel="stylesheet" href="../signup.css">
     <link rel="stylesheet" href="barberstyle.css">
+    <link rel="shortcut icon" href="#">
 </head>
 
 <body>
