--- a/architectureProject/public/index.html
+++ b/architectureProject/public/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="signup.css">
     <link rel="stylesheet" href="navbar.css">
+    <link rel="shortcut icon" href="#">
 </head>
 
 <body>
@@ -65,10 +66,10 @@
     <table>
         <tr>
             <td><video id="background-video1" autoplay loop muted>
-                    <source src="MainAssets/barberVideo.mp4" type="video/mp4">
+                    <source src="./mainAssets/barberVideo.mp4" type="video/mp4">
                 </video></td>
             <td><video id="background-video2" autoplay loop muted>
-                    <source src="MainAssets/costumerVideo.mp4" type="video/mp4">
+                    <source src="./mainAssets/costumerVideo.mp4" type="video/mp4">
                 </video></td>
         </tr>
     </table>
