--- a/architectureProject/public/profileComponent/profile.html
+++ b/architectureProject/public/profileComponent/profile.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="profile.css">
     <link rel="stylesheet" href="../navbar.css">
     <link rel="stylesheet" href="../signup.css">
+    <link rel="shortcut icon" href="#">
 
 <body>
 
