finished, without mailing

--- a/architectureProject/public/customerComponent/customer.html
+++ b/architectureProject/public/customerComponent/customer.html
@@ -38,7 +38,7 @@
         <a><img id="avatar" class="avatar" src="../assets/avatar.png" alt="" referrerpolicy="no-referrer"></a>
         <span id="userName" class="navbar-brand mb-0 h1"></span>
         <button id="navSignUpBtn" class="btn btn-outline-success me-2" type="button" hidden="false">Sign
-          Up</button>
+          In</button>
         <button id="navSignOutBtn" class="btn btn-outline-success me-2" type="button" hidden="true">Sign
           Out</button>
       </div>
@@ -52,7 +52,7 @@
         <h1>Sign Up</h1>
         <p>Please fill in this form to create an account.</p>
         <label for="phone"><b>Phone Number</b></label><br>
-        <input type="tel" id="phone" name="phone" placeholder="054-4567899" pattern="[0-9]{3}--[0-9]{7}" required>
+        <input type="tel" id="phone" name="phone" placeholder="05x-xxxxxxx" pattern="[0-9]{3}--[0-9]{7}" required>
 
         <br>
         <label>
@@ -65,7 +65,7 @@
         </div>
         <div class="clearfix">
           <button id="cancelDialogBtn" type="button" class="cancelbtn">Cancel</button>
-          <button id="googleSignInBtn" class="btn-primary signupbtn">Sign in with Google</button>
+          <button id="continueDialogBtn" class="btn-primary signupbtn">Continue</button>
         </div>
       </div>
     </form>
