--- a/architectureProject/public/index.html
+++ b/architectureProject/public/index.html
@@ -29,7 +29,7 @@
                 <a><img id="avatar" class="avatar" src="../assets/avatar.png" alt="" width="30" height="24"></a>
                 <span id="userName" class="navbar-brand mb-0 h1"></span>
                 <button id="navSignUpBtn" class="btn btn-outline-success me-2" type="button" hidden="false">Sign
-                    Up</button>
+                    In</button>
                 <button id="navSignOutBtn" class="btn btn-outline-success me-2" type="button" hidden="true">Sign
                     Out</button>
             </div>
@@ -43,7 +43,7 @@
                 <h1>Sign Up</h1>
                 <p>Please fill in this form to create an account.</p>
                 <label for="phone"><b>Phone Number</b></label><br>
-                <input type="tel" id="phone" name="phone" placeholder="054-4567899" pattern="[0-9]{3}--[0-9]{7}"
+                <input type="tel" id="phone" name="phone" placeholder="05x-xxxxxxx" pattern="[0-9]{3}--[0-9]{7}"
                     required>
 
                 <br>
@@ -57,34 +57,31 @@
                 </div>
                 <div class="clearfix">
                     <button id="cancelDialogBtn" type="button" class="cancelbtn">Cancel</button>
-                    <button id="googleSignInBtn" class="btn-primary signupbtn">Sign in with Google</button>
+                    <button id="continueDialogBtn" class="btn-primary signupbtn">Continue</button>
                 </div>
             </div>
         </form>
     </div>
 
-    <table>
-        <tr>
-            <td><video id="background-video1" autoplay loop muted>
-                    <source src="./mainAssets/barberVideo.mp4" type="video/mp4">
-                </video></td>
-            <td><video id="background-video2" autoplay loop muted>
-                    <source src="./mainAssets/costumerVideo.mp4" type="video/mp4">
-                </video></td>
-        </tr>
-    </table>
-    <table id="buttonsTable">
-        <tr>
-            <div id="buttons">
-                <td><a href="./barberComponent/barber.html">
-                        <button id=barberBtn>Barber</button>
-                    </a></td>
-                <td><a href="./customerComponent/customer.html">
-                        <button id=customerBtn>Customer</button>
-                    </a></td>
-            </div>
-        </tr>
-    </table>
+
+    <video id="background-video1" autoplay loop muted>
+        <source src="./mainAssets/barbershop.mp4" type="video/mp4">
+    </video>
+
+    <span class="welcome_title">
+        <h1>Welcome to my barberShop</h1>
+    </span>
+
+    <span>
+        <a href="./customerComponent/customer.html">
+            <button id=customerBtn hidden class="customer_btn" role="button">Book now</button>
+        </a>
+    </span>
+    <span>
+        <a href="./barberComponent/barber.html">
+            <button id=barberBtn hidden class="barber_btn" role="button">Barber</button>
+        </a>
+    </span>
 </body>
 
 </html>
