--- a/architectureProject/public/profileComponent/profile.html
+++ b/architectureProject/public/profileComponent/profile.html
@@ -28,7 +28,7 @@
                 <a><img id="avatar" class="avatar" src="../assets/avatar.png" alt="" referrerpolicy="no-referrer"></a>
                 <span id="userName" class="navbar-brand mb-0 h1"></span>
                 <button id="navSignUpBtn" class="btn btn-outline-success me-2" type="button" hidden="false">Sign
-                    Up</button>
+                    In</button>
                 <button id="navSignOutBtn" class="btn btn-outline-success me-2" type="button" hidden="true">Sign
                     Out</button>
             </div>
@@ -42,7 +42,7 @@
                 <h1>Sign Up</h1>
                 <p>Please fill in this form to create an account.</p>
                 <label for="phone"><b>Phone Number</b></label><br>
-                <input type="tel" id="phone" name="phone" placeholder="054-4567899" pattern="[0-9]{3}--[0-9]{7}"
+                <input type="tel" id="phone" name="phone" placeholder="05x-xxxxxxx" pattern="[0-9]{3}--[0-9]{7}"
                     required>
 
                 <br>
@@ -56,7 +56,7 @@
                 </div>
                 <div class="clearfix">
                     <button id="cancelDialogBtn" type="button" class="cancelbtn">Cancel</button>
-                    <button id="googleSignInBtn" class="btn-primary signupbtn">Sign in with Google</button>
+                    <button id="continueDialogBtn" class="btn-primary signupbtn">Continue</button>
                 </div>
             </div>
         </form>
@@ -77,22 +77,21 @@
                 <span id="profileEmail"></span>
             </div>
             <div class="item4">
-                <label for="isBarber">Are you a barber?</label>
-                <input type="checkbox" id="profileIsBarber" name="isBarber">
-            </div>
-            <div class="item5">
                 <span id="profilePhone"></span>
             </div>
         </div>
+        <br>
         <div class="reservationsContainer">
-            <p>Future Reservations:</p>
-            <table id="reservationsList" class="reservationsList"></table>
+            <h4>Future Reservations:</h4>
+            <table id="reservationsList" class="reservationsList">
+                <h6>There are no reservations assigned to you</h6>
+            </table>
         </div>
 
         <hr>
         <div class="cancel_container">
-            <input id="resInputId" type="text" placeholder="Enter a reservation id:">
-            <button id="cancelBtn">Cancel</button>
+            <input id="resInputId" type="text" placeholder=" Enter a reservation id:">
+            <button id="cancelBtn" class="btn btn-danger">Cancel reservation</button>
         </div>
     </div>
 </body>
