--- a/architectureProject/public/customerComponent/customer.html
+++ b/architectureProject/public/customerComponent/customer.html
@@ -14,6 +14,9 @@
     src="https://www.paypal.com/sdk/js?client-id=AbzOaMbfCb9qmBeHrEsYNv2fbxPeKL2HwWTQfpcEvsQYxD5q_E3PLDHTHf-wBb4LA8fOHdAo2txn6Xm7">
     </script>
 
+  <!-- for mailing -->
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
+
   <script src="../firebaseConfig.js"></script>
   <script src="../navbar.js" defer></script>
   <script src="../utils.js" defer></script>
@@ -94,7 +97,8 @@
       <span id="barberPhoneText"></span>
       <a id="whatsappLink" class="whatsappLink" href="https://wa.me/9720547278105">
         <img alt="" src="./CustomerAssets/whatsappIcon.png" width="30" height="30">
-      </a></div>
+      </a>
+    </div>
     <div id="barberSpeech" class="barberSpeech"></div>
   </div>
   <button class="btn btn-primary" id="checkBtn" disabled>Check</button>
