--- a/architectureProject/public/profileComponent/profile.html
+++ b/architectureProject/public/profileComponent/profile.html
@@ -6,6 +6,8 @@
     <script src="https://www.gstatic.com/firebasejs/7.16.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.16.1/firebase-firestore.js"></script>
 
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+
     <script src="../firebaseConfig.js"></script>
     <script src="../navbar.js" defer></script>
     <script src="profile.js" defer></script>
