--- a/architectureProject/public/index.html
+++ b/architectureProject/public/index.html
@@ -68,9 +68,14 @@
         <source src="./mainAssets/barbershop.mp4" type="video/mp4">
     </video>
 
-    <span class="welcome_title">
-        <h1>Welcome to my barberShop</h1>
-    </span>
+    <div class="main_title">
+        <span class="welcome_title">
+            <h1>Welcome to my barberShop</h1>
+        </span>
+        <span id="signOutNotify" class="signOut_notify">
+            <h5>In order to proceed, please sign in/up</h5>
+        </span>
+    </div>
 
     <span>
         <a href="./customerComponent/customer.html">
