--- a/architectureProject/public/index.html
+++ b/architectureProject/public/index.html
@@ -43,7 +43,7 @@
                 <h1>Sign Up</h1>
                 <p>Please fill in this form to create an account.</p>
                 <label for="phone"><b>Phone Number</b></label><br>
-                <input type="tel" id="phone" name="phone" placeholder="05x-xxxxxxx" pattern="[0-9]{3}--[0-9]{7}"
+                <input type="tel" id="phone" name="phone" placeholder="05x-xxxxxxx" pattern="^05[0-9]{1}-[0-9]{7}"
                     required>
 
                 <br>
