--- a/architectureProject/public/profileComponent/profile.html
+++ b/architectureProject/public/profileComponent/profile.html
@@ -44,7 +44,7 @@
                 <h1>Sign Up</h1>
                 <p>Please fill in this form to create an account.</p>
                 <label for="phone"><b>Phone Number</b></label><br>
-                <input type="tel" id="phone" name="phone" placeholder="05x-xxxxxxx" pattern="[0-9]{3}--[0-9]{7}"
+                <input type="tel" id="phone" name="phone" placeholder="05x-xxxxxxx" pattern="^05[0-9]{1}-[0-9]{7}"
                     required>
 
                 <br>
@@ -86,7 +86,7 @@
         <div class="reservationsContainer">
             <h4>Future Reservations:</h4>
             <table id="reservationsList" class="reservationsList">
-                <h6>There are no reservations assigned to you</h6>
+                <tr><td>There are no reservations assigned to you</td></tr>
             </table>
         </div>
 
