finished refactor profile page

--- a/architectureProject/public/customerComponent/customer.html
+++ b/architectureProject/public/customerComponent/customer.html
@@ -12,6 +12,7 @@
   <script src="https://smtpjs.com/v3/smtp.js"></script>
 
   <script src="../firebaseConfig.js"></script>
+  <script src="../firebaseAdapter.js" defer></script>
   <script src="../navbar.js" defer></script>
   <script src="../utils.js" defer></script>
   <script src="../generateTable.js" defer></script>
