--- a/architectureProject/public/profileComponent/profile.html
+++ b/architectureProject/public/profileComponent/profile.html
@@ -9,7 +9,9 @@
     <script src="https://smtpjs.com/v3/smtp.js"></script>
 
     <script src="../firebaseConfig.js"></script>
+    <script src="../firebaseAdapter.js" defer></script>
     <script src="../navbar.js" defer></script>
+    <script src="../utils.js" defer></script>
     <script src="profile.js" defer></script>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
