refactored customer page

--- a/architectureProject/public/customerComponent/customer.html
+++ b/architectureProject/public/customerComponent/customer.html
@@ -16,6 +16,8 @@
   <script src="../navbar.js" defer></script>
   <script src="../utils.js" defer></script>
   <script src="../generateTable.js" defer></script>
+  <script src="../constants.js" defer></script>
+  <script src="customerUtils.js" defer></script>
   <script src="customerpagejs.js" defer></script>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
