refactored index page

--- a/architectureProject/public/index.html
+++ b/architectureProject/public/index.html
@@ -9,6 +9,7 @@
 
     <script src="firebaseConfig.js"></script>
     <script src="navbar.js" defer></script>
+    <script src="firebaseAdapter.js" defer></script>
     <script src="app.js" defer></script>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
