refactored barber page

--- a/architectureProject/public/barberComponent/barber.html
+++ b/architectureProject/public/barberComponent/barber.html
@@ -14,6 +14,8 @@
     <script src="../navbar.js" defer></script>
     <script src="../utils.js" defer></script>
     <script src="../generateTable.js" defer></script>
+    <script src="../constants.js" defer></script>
+    <script src="barberUtils.js" defer></script>
     <script src="barberpagejs.js" defer></script>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
