--- a/architectureProject/public/profileComponent/profile.html
+++ b/architectureProject/public/profileComponent/profile.html
@@ -46,7 +46,7 @@
                 <h1>Sign Up</h1>
                 <p>Please fill in this form to create an account.</p>
                 <label for="phone"><b>Phone Number</b></label><br>
-                <input type="tel" id="phone" name="phone" placeholder="05x-xxxxxxx" pattern="^05[0-9]{1}-[0-9]{7}"
+                <input type="tel" id="phone" name="phone" placeholder="05xxxxxxxx" pattern="^05[0-9]{8}"
                     required>
 
                 <br>
